Implemented EgoItem parser
Signed-off-by: rowan <rowan@rowancrowther.me.uk>